--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="text-base text-prose sm:text-sm">
+  <body data-sveltekit-preload-data="hover" class="text-base text-prose-weak sm:text-sm">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
